--- a/ExilenceNextApp/public/index.html
+++ b/ExilenceNextApp/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>Exilence NEXT</title>
   </head>
   <body>
     <div id="root"></div>
