--- a/ExilenceNextApp/public/overlays/netWorth.html
+++ b/ExilenceNextApp/public/overlays/netWorth.html
@@ -14,8 +14,29 @@
                 font-size: 14px;
                 color: #fff;
                 font-family: Roboto;
-                background: linear-gradient(rgba(16, 16, 16, .9), rgba(16, 16, 16, .88));
+                background: #101010;
                 overflow: hidden;
+            }
+
+            .title1 { grid-area: topLeft; }
+            .title2 { grid-area: bottomLeft; }
+
+            .content1 { grid-area: topRight; justify-content: flex-end; }
+            .content2 { grid-area: bottomRight; justify-content: flex-end; }
+
+            .grid-container {
+                display: grid;
+                grid-template-areas:
+                    'topLeft topLeft topLeft topRight topRight topRight'
+                    'bottomLeft bottomLeft bottomLeft bottomRight bottomRight bottomRight';
+                grid-gap: 10px;
+                padding: 10px;
+            }
+
+            .grid-container > div {
+                display: flex;
+                text-align: center;
+                padding: 5px 0;
             }
 
             header,
@@ -24,10 +45,13 @@
             }
 
             header {
+                text-transform: uppercase;
+                letter-spacing: 2px;
                 -webkit-app-region: drag;
+                font-size: 0.8rem;
                 height: 15px;
                 color: #e91e63;
-                background-color: #0a0a0a;
+                background-color: #000;
                 display: flex;
             }
 
@@ -39,13 +63,17 @@
                 align-items: center;
             }
 
+            header .left-area {
+                display: flex;
+                align-items: center;
+            }
+
             .label {
                 margin: 5px;
             }
 
-            #gain,
-            #networth {
-                color: #f0cc00;
+            .net-worth {
+                color: rgb(214, 182, 0);
             }
 
             .material-icons {
@@ -75,33 +103,28 @@
 
     <body>
         <header>
-            Net worth
+            <div class="left-area">Net worth</div>
             <div class="right-area">
                 <i class="material-icons" onclick="closeWindow()">close</i>
             </div>
         </header>
-        <main>
-            <p class="label">Current net worth:
-                <span id="networth">
-                    <i>loading...</i>
-                </span>
-            </p>
-            <p class="label">Gain per hour:
-                <span id="gain">
-                    <i>loading...</i>
-                </span>
-            </p>
-        </main>
+        <div class="grid-container">
+            <div class="title1">Net worth</div>
+            <div id="netWorth" class="content1 net-worth">0 c</div>
+            <div class="title2">Income</div>  
+            <div id="income" class="content2 net-worth">0 c</div>
+          </div>
         <script>
             const { ipcRenderer, remote } = require('electron')
 
-            const gainElement = document.getElementById('gain');
-            const networthElement = document.getElementById('networth');
+            const incomeElement = document.getElementById('income');
+            const netWorthElement = document.getElementById('netWorth');
 
             ipcRenderer.on('overlayUpdate', (event, window) => {
+                console.log(window);
                 if (window.event === 'netWorth') {
-                    networthElement.innerText = +window.data.networth.toFixed(2) + 'c';
-                    gainElement.innerText = +window.data.gain.toFixed(2) + 'c';
+                    netWorthElement.innerText = +window.data.netWorth.toFixed(2) + ' c';
+                    incomeElement.innerText = +window.data.income.toFixed(2) + ' c';
                 }
             })
 
