refactor: rewrite electron dir to typescript

--- a/ExilenceNextApp/electron/main/overlays/NetWorth/netWorth.html
+++ b/ExilenceNextApp/electron/main/overlays/NetWorth/netWorth.html
@@ -132,7 +132,7 @@
             })
 
             function closeWindow() {
-                ipcRenderer.send('close-overlay', { overlay: 'networth' });
+                ipcRenderer.send('close-overlay', { overlay: 'net-worth' });
             }
 
         </script>
